--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,11 @@
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava-tests</artifactId>
+                <version>18.0</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
