--- a/pom.xml
+++ b/pom.xml
@@ -273,12 +273,13 @@
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>
+          
             <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava-tests</artifactId>
-                <version>18.0</version>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
-            
         </dependencies>
     </dependencyManagement>
 
